fixed layout bug

--- a/src/app/research/research.component.css
+++ b/src/app/research/research.component.css
@@ -94,7 +94,6 @@ nav {
   transform: translate(-50%, -15%); 
   margin-bottom: 10px;
   animation: fill 0.5s ease forwards 2.5s; 
-  z-index: 100;
 }
 
 #logo path:nth-child(1){
@@ -155,17 +154,17 @@ nav {
 }
 
 .container{
+    margin: 0 auto; 
     display: grid;
     grid-template-columns:auto auto;
-    grid-gap: 10%;
-    margin: 0 auto;
-    top: 15%;
-    transform: translateY(15%);
-    padding-bottom: 10%;
+    column-gap: 10%;
+    row-gap: 1%;
+    top: 1.5%;
+    transform: translateY(1.5%);
+    padding-bottom: 65%;
 }
 
 .researchCard{
-    height: auto;
     box-shadow: 0.5rem 0.5rem black, -0.5rem -0.5rem #ccc;
     border-radius: 10%;
     transition: 0.5s;
@@ -181,10 +180,9 @@ nav {
     margin: 0 auto;
     font-family: 'Poppins', sans-serif;
     font-size: 50px;
-    margin: 0;
-    padding: 0;
     font-weight: 900;
     margin-top: 5%;
+    width: 90%; 
 }
 .cardDescription{
     font-family: 'Poppins', sans-serif;
